2012-06-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/functions_reporting.php,
	operation/agentes/status_monitor.php: cleaned source code style.
	
	* extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/main.php: now the function "get_key"
	returns more info about error to get user key from execution of
	keygen, and the calls of this function show more info about the
	kind errors.
	
	Merged from 4.0.2

2012-06-25  Sancho Lerena <slerena@artica.es>

	* operation/menu.php: Changed order of treeview in menu.

2012-06-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: cleaned source code style.
	
	* include/functions_custom_graphs.php: fixed into the function
	"graphic_combined_module" the show html entities in the name of
	agents in legends, show better the legend for long size names of
	agents and modules.
	
	Merged from 4.0.2
	
	* extensions/update_manager/debug.php: upload lost file from old
	commit.

2012-06-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Improved several 
	parts of SLA reports. Add icons to criticity, etc.
	
	* include/functions_api.php: Fixed bug in get events
	api function remaning function
	
	* godmode/reporting/graph_builder.graph_editor.php: Increase
	the size of little combo boxes in combined graphs editor

	Merged from 4.0.2

2012-06-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/main.php,
	extensions/update_manager/debug.php: added the feature to get traces
	of execution. Only change the flag for debug in debug.php .
	
	Merged from 4.0.2

2012-06-22  Vanessa Gil <vanessa.gil@artica.es>

	* operation/users/user_edit.php
	  godmode/users/configure_user.php: Apply password policy