@@ -1,3 +1,12 @@
+2012-06-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* include/functions_visual_map.php
+	 godmode/reporting/visual_console_builder.wizard.php
+	 godmode/reporting/visual_console_builder.php: Visual console 
+	 wizard 'item per agent' functionality. 
+
+	Merged from branches.
+
 2012-06-25 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_graph.php, include/functions_reporting.php,
